# app-helloworld-rust

./: .gitignore  Config.uk  MAINTAINERS.md  Makefile  Makefile.uk  README.md  main.c
helloworld/: Cargo.toml
helloworld/.cargo/: config
helloworld/src/: lib.rs
