[package]
name = "helloworld"
version = "0.1.0"
authors = ["Cyril Soldani <cyril.soldani@uliege.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
